--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,7 @@ cover/
 # Django stuff:
 *.log
 local_settings.py
+*.sqlite3
 db.sqlite3
 db.sqlite3-journal
 
@@ -205,3 +206,6 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+examples/
+*.db
